--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.0",
+    "sweetalert2": "^11.26.18",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
